--- a/style.css
+++ b/style.css
@@ -88,16 +88,16 @@ main img:first-child {
 
 #col1 {
     position: absolute;
-    top: 0px;
-    left: 25px;
-    font-size: 25px;
+    top: 40px;
+    left: 95px;
+    font-size: 20px;
 }
 
 #col2 {
     position: absolute;
-    top: 0px;
-    right: 25px;
-    font-size: 25px;
+    top: 40px;
+    right: 95px;
+    font-size: 20px;
 }
 
 article {
@@ -120,11 +120,13 @@ article {
 h4 {
     font-size: 30px;
     margin-bottom: 0px;
+    margin-left: 90px;
+    margin-top: 0px;
 }
 
 article p {
     margin-top: 0px;
-    margin-left: 80px;
+    margin-left: 90px;
     color: grey
 }
 
@@ -135,12 +137,14 @@ ul {
 button {
     float: right;
     margin-top: 20px;
-    background-color: rgb(181, 103, 61);
+    background-color: rgb(220, 113, 56);
     color: white;
-    padding: 20px;
-    padding-left: 40px;
-    padding-right: 40px;
-    font-size: 20px;
+    padding: 12px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    border: solid rgb(220, 113, 56);
 }
 
 footer {
